fixed makefile issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(pbt)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 include_directories ("3rdparty/catch/include")
+include_directories ("3rdparty/cpp-quick-check/include")
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES main.cpp ebt.cpp pbt.cpp 3rdparty/cpp-quick-check/src/Arbitrary.cpp)
 add_executable(pbt ${SOURCE_FILES})
