--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "3rdparty/cpp-quick-check"]
 	path = 3rdparty/cpp-quick-check
-	url = git@github.com:grogers0/CppQuickCheck.git
+	url = git@github.com:vstrisovsky/CppQuickCheck.git
 [submodule "3rdparty/catch"]
 	path = 3rdparty/catch
 	url = git@github.com:philsquared/Catch.git
